src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencias
Rule 2     sentencias -> sentencias sentencia
Rule 3     sentencias -> sentencia
Rule 4     sentencia -> asignacion
Rule 5     sentencia -> impresion PUNTO_COMA
Rule 6     sentencia -> impresion
Rule 7     sentencia -> entrada_datos
Rule 8     sentencia -> estructura_control
Rule 9     sentencia -> definicion_funcion
Rule 10    sentencia -> definicion_clase
Rule 11    sentencia -> definicion_modulo
Rule 12    sentencia -> estructura_datos
Rule 13    sentencia -> expresion
Rule 14    sentencia -> COMENTARIO_LINEA
Rule 15    sentencia -> COMENTARIO_MULTILINEA
Rule 16    asignacion -> variable ASIGNACION expresion
Rule 17    asignacion -> variable SUMA_ASIG expresion
Rule 18    asignacion -> variable RESTA_ASIG expresion
Rule 19    asignacion -> variable MULT_ASIG expresion
Rule 20    asignacion -> variable DIV_ASIG expresion
Rule 21    variable -> VARIABLE_LOCAL
Rule 22    variable -> VARIABLE_GLOBAL
Rule 23    variable -> VARIABLE_INSTANCIA
Rule 24    variable -> VARIABLE_CLASE
Rule 25    variable -> CONSTANTE
Rule 26    expresion -> expresion SUMA expresion
Rule 27    expresion -> expresion RESTA expresion
Rule 28    expresion -> expresion MULTIPLICACION expresion
Rule 29    expresion -> expresion DIVISION expresion
Rule 30    expresion -> expresion MODULO expresion
Rule 31    expresion -> expresion IGUAL expresion
Rule 32    expresion -> expresion DIFERENTE expresion
Rule 33    expresion -> expresion MAYOR expresion
Rule 34    expresion -> expresion MENOR expresion
Rule 35    expresion -> expresion MAYOR_IGUAL expresion
Rule 36    expresion -> expresion MENOR_IGUAL expresion
Rule 37    expresion -> expresion AND expresion
Rule 38    expresion -> expresion OR expresion
Rule 39    expresion -> NOT expresion
Rule 40    expresion -> RESTA expresion
Rule 41    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 42    expresion -> INTEGER
Rule 43    expresion -> FLOAT
Rule 44    expresion -> STRING
Rule 45    expresion -> SIMBOLO
Rule 46    expresion -> TRUE
Rule 47    expresion -> FALSE
Rule 48    expresion -> NIL
Rule 49    expresion -> variable
Rule 50    expresion -> arreglo
Rule 51    expresion -> hash
Rule 52    impresion -> PUTS argumentos_impresion
Rule 53    impresion -> PRINT argumentos_impresion
Rule 54    argumentos_impresion -> argumentos_impresion COMA expresion
Rule 55    argumentos_impresion -> expresion
Rule 56    entrada_datos -> GETS
Rule 57    entrada_datos -> variable ASIGNACION GETS
Rule 58    estructura_datos -> arreglo
Rule 59    estructura_datos -> hash
Rule 60    arreglo -> CORCHETE_IZQ elementos CORCHETE_DER
Rule 61    arreglo -> CORCHETE_IZQ CORCHETE_DER
Rule 62    elementos -> elementos COMA expresion
Rule 63    elementos -> expresion
Rule 64    hash -> LLAVE_IZQ pares LLAVE_DER
Rule 65    hash -> LLAVE_IZQ LLAVE_DER
Rule 66    pares -> pares COMA par
Rule 67    pares -> par
Rule 68    par -> VARIABLE_LOCAL DOS_PUNTOS expresion
Rule 69    par -> STRING FLECHA expresion
Rule 70    par -> expresion FLECHA expresion
Rule 71    estructura_control -> if_statement
Rule 72    estructura_control -> while_loop
Rule 73    estructura_control -> for_loop
Rule 74    estructura_control -> until_loop
Rule 75    if_statement -> IF expresion sentencias END
Rule 76    if_statement -> IF expresion THEN sentencias END
Rule 77    if_statement -> IF expresion sentencias ELSE sentencias END
Rule 78    if_statement -> IF expresion THEN sentencias ELSE sentencias END
Rule 79    if_statement -> IF expresion sentencias elsif_chain END
Rule 80    if_statement -> IF expresion THEN sentencias elsif_chain END
Rule 81    if_statement -> IF expresion sentencias elsif_chain ELSE sentencias END
Rule 82    if_statement -> IF expresion THEN sentencias elsif_chain ELSE sentencias END
Rule 83    elsif_chain -> elsif_chain elsif_block
Rule 84    elsif_chain -> elsif_block
Rule 85    elsif_block -> ELSIF expresion sentencias
Rule 86    elsif_block -> ELSIF expresion THEN sentencias
Rule 87    while_loop -> WHILE expresion sentencias END
Rule 88    while_loop -> WHILE expresion DO sentencias END
Rule 89    for_loop -> FOR VARIABLE_LOCAL IN rango sentencias END
Rule 90    for_loop -> FOR VARIABLE_LOCAL IN rango DO sentencias END
Rule 91    for_loop -> FOR VARIABLE_LOCAL IN expresion sentencias END
Rule 92    for_loop -> FOR VARIABLE_LOCAL IN expresion DO sentencias END
Rule 93    until_loop -> UNTIL expresion sentencias END
Rule 94    until_loop -> UNTIL expresion DO sentencias END
Rule 95    rango -> expresion PUNTO PUNTO expresion
Rule 96    rango -> expresion PUNTO PUNTO PUNTO expresion
Rule 97    sentencia -> BREAK
Rule 98    sentencia -> NEXT
Rule 99    sentencia -> REDO
Rule 100   sentencia -> RETURN
Rule 101   sentencia -> RETURN expresion
Rule 102   definicion_funcion -> DEF nombre_funcion sentencias END
Rule 103   definicion_funcion -> DEF nombre_funcion PARENTESIS_IZQ parametros PARENTESIS_DER sentencias END
Rule 104   definicion_funcion -> DEF nombre_funcion PARENTESIS_IZQ PARENTESIS_DER sentencias END
Rule 105   nombre_funcion -> VARIABLE_LOCAL
Rule 106   nombre_funcion -> VARIABLE_LOCAL PUNTO VARIABLE_LOCAL
Rule 107   parametros -> parametros COMA VARIABLE_LOCAL
Rule 108   parametros -> VARIABLE_LOCAL
Rule 109   expresion -> VARIABLE_LOCAL PARENTESIS_IZQ argumentos PARENTESIS_DER
Rule 110   expresion -> VARIABLE_LOCAL PARENTESIS_IZQ PARENTESIS_DER
Rule 111   expresion -> CONSTANTE PUNTO VARIABLE_LOCAL PARENTESIS_IZQ argumentos PARENTESIS_DER
Rule 112   expresion -> CONSTANTE PUNTO VARIABLE_LOCAL PARENTESIS_IZQ PARENTESIS_DER
Rule 113   argumentos -> argumentos COMA expresion
Rule 114   argumentos -> expresion
Rule 115   definicion_clase -> CLASS CONSTANTE sentencias_clase END
Rule 116   definicion_clase -> CLASS CONSTANTE END
Rule 117   sentencias_clase -> sentencias_clase sentencia_clase
Rule 118   sentencias_clase -> sentencia_clase
Rule 119   sentencia_clase -> definicion_funcion
Rule 120   sentencia_clase -> asignacion
Rule 121   sentencia_clase -> COMENTARIO_LINEA
Rule 122   sentencia_clase -> COMENTARIO_MULTILINEA
Rule 123   definicion_modulo -> MODULE CONSTANTE sentencias_clase END
Rule 124   definicion_modulo -> MODULE CONSTANTE END
Rule 125   sentencia -> REQUIRE STRING
Rule 126   sentencia -> REQUIRE VARIABLE_LOCAL

Terminals, with rules where they appear

AND                  : 37
ASIGNACION           : 16 57
BREAK                : 97
CLASS                : 115 116
COMA                 : 54 62 66 107 113
COMENTARIO_LINEA     : 14 121
COMENTARIO_MULTILINEA : 15 122
CONSTANTE            : 25 111 112 115 116 123 124
CORCHETE_DER         : 60 61
CORCHETE_IZQ         : 60 61
DEF                  : 102 103 104
DIFERENTE            : 32
DIVISION             : 29
DIV_ASIG             : 20
DO                   : 88 90 92 94
DOS_PUNTOS           : 68
ELSE                 : 77 78 81 82
ELSIF                : 85 86
END                  : 75 76 77 78 79 80 81 82 87 88 89 90 91 92 93 94 102 103 104 115 116 123 124
FALSE                : 47
FLECHA               : 69 70
FLOAT                : 43
FOR                  : 89 90 91 92
GETS                 : 56 57
IF                   : 75 76 77 78 79 80 81 82
IGUAL                : 31
IN                   : 89 90 91 92
INTEGER              : 42
LLAVE_DER            : 64 65
LLAVE_IZQ            : 64 65
MAYOR                : 33
MAYOR_IGUAL          : 35
MENOR                : 34
MENOR_IGUAL          : 36
MODULE               : 123 124
MODULO               : 30
MULTIPLICACION       : 28
MULT_ASIG            : 19
NEXT                 : 98
NIL                  : 48
NOT                  : 39
OR                   : 38
PARENTESIS_DER       : 41 103 104 109 110 111 112
PARENTESIS_IZQ       : 41 103 104 109 110 111 112
PRINT                : 53
PUNTO                : 95 95 96 96 96 106 111 112
PUNTO_COMA           : 5
PUTS                 : 52
REDO                 : 99
REQUIRE              : 125 126
RESTA                : 27 40
RESTA_ASIG           : 18
RETURN               : 100 101
SIMBOLO              : 45
STRING               : 44 69 125
SUMA                 : 26
SUMA_ASIG            : 17
THEN                 : 76 78 80 82 86
TRUE                 : 46
UNTIL                : 93 94
VARIABLE_CLASE       : 24
VARIABLE_GLOBAL      : 22
VARIABLE_INSTANCIA   : 23
VARIABLE_LOCAL       : 21 68 89 90 91 92 105 106 106 107 108 109 110 111 112 126
WHILE                : 87 88
error                : 

Nonterminals, with rules where they appear

argumentos           : 109 111 113
argumentos_impresion : 52 53 54
arreglo              : 50 58
asignacion           : 4 120
definicion_clase     : 10
definicion_funcion   : 9 119
definicion_modulo    : 11
elementos            : 60 62
elsif_block          : 83 84
elsif_chain          : 79 80 81 82 83
entrada_datos        : 7
estructura_control   : 8
estructura_datos     : 12
expresion            : 13 16 17 18 19 20 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40 41 54 55 62 63 68 69 70 70 75 76 77 78 79 80 81 82 85 86 87 88 91 92 93 94 95 95 96 96 101 113 114
for_loop             : 73
hash                 : 51 59
if_statement         : 71
impresion            : 5 6
nombre_funcion       : 102 103 104
par                  : 66 67
parametros           : 103 107
pares                : 64 66
programa             : 0
rango                : 89 90
sentencia            : 2 3
sentencia_clase      : 117 118
sentencias           : 1 2 75 76 77 77 78 78 79 80 81 81 82 82 85 86 87 88 89 90 91 92 93 94 102 103 104
sentencias_clase     : 115 117 123
until_loop           : 74
variable             : 16 17 18 19 20 49 57
while_loop           : 72

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencias
    (2) sentencias -> . sentencias sentencia
    (3) sentencias -> . sentencia
    (4) sentencia -> . asignacion
    (5) sentencia -> . impresion PUNTO_COMA
    (6) sentencia -> . impresion
    (7) sentencia -> . entrada_datos
    (8) sentencia -> . estructura_control
    (9) sentencia -> . definicion_funcion
    (10) sentencia -> . definicion_clase
    (11) sentencia -> . definicion_modulo
    (12) sentencia -> . estructura_datos
    (13) sentencia -> . expresion
    (14) sentencia -> . COMENTARIO_LINEA
    (15) sentencia -> . COMENTARIO_MULTILINEA
    (97) sentencia -> . BREAK
    (98) sentencia -> . NEXT
    (99) sentencia -> . REDO
    (100) sentencia -> . RETURN
    (101) sentencia -> . RETURN expresion
    (125) sentencia -> . REQUIRE STRING
    (126) sentencia -> . REQUIRE VARIABLE_LOCAL
    (16) asignacion -> . variable ASIGNACION expresion
    (17) asignacion -> . variable SUMA_ASIG expresion
    (18) asignacion -> . variable RESTA_ASIG expresion
    (19) asignacion -> . variable MULT_ASIG expresion
    (20) asignacion -> . variable DIV_ASIG expresion
    (52) impresion -> . PUTS argumentos_impresion
    (53) impresion -> . PRINT argumentos_impresion
    (56) entrada_datos -> . GETS
    (57) entrada_datos -> . variable ASIGNACION GETS
    (71) estructura_control -> . if_statement
    (72) estructura_control -> . while_loop
    (73) estructura_control -> . for_loop
    (74) estructura_control -> . until_loop
    (102) definicion_funcion -> . DEF nombre_funcion sentencias END
    (103) definicion_funcion -> . DEF nombre_funcion PARENTESIS_IZQ parametros PARENTESIS_DER sentencias END
    (104) definicion_funcion -> . DEF nombre_funcion PARENTESIS_IZQ PARENTESIS_DER sentencias END
    (115) definicion_clase -> . CLASS CONSTANTE sentencias_clase END
    (116) definicion_clase -> . CLASS CONSTANTE END
    (123) definicion_modulo -> . MODULE CONSTANTE sentencias_clase END
    (124) definicion_modulo -> . MODULE CONSTANTE END
    (58) estructura_datos -> . arreglo
    (59) estructura_datos -> . hash
    (26) expresion -> . expresion SUMA expresion
    (27) expresion -> . expresion RESTA expresion
    (28) expresion -> . expresion MULTIPLICACION expresion
    (29) expresion -> . expresion DIVISION expresion
    (30) expresion -> . expresion MODULO expresion
    (31) expresion -> . expresion IGUAL expresion
    (32) expresion -> . expresion DIFERENTE expresion
    (33) expresion -> . expresion MAYOR expresion
    (34) expresion -> . expresion MENOR expresion
    (35) expresion -> . expresion MAYOR_IGUAL expresion
    (36) expresion -> . expresion MENOR_IGUAL expresion
    (37) expresion -> . expresion AND expresion
    (38) expresion -> . expresion OR expresion
    (39) expresion -> . NOT expresion
    (40) expresion -> . RESTA expresion
    (41) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (42) expresion -> . INTEGER
    (43) expresion -> . FLOAT
    (44) expresion -> . STRING
    (45) expresion -> . SIMBOLO
    (46) expresion -> . TRUE
    (47) expresion -> . FALSE
    (48) expresion -> . NIL
    (49) expresion -> . variable
    (50) expresion -> . arreglo
    (51) expresion -> . hash
    (109) expresion -> . VARIABLE_LOCAL PARENTESIS_IZQ argumentos PARENTESIS_DER
    (110) expresion -> . VARIABLE_LOCAL PARENTESIS_IZQ PARENTESIS_DER
    (111) expresion -> . CONSTANTE PUNTO VARIABLE_LOCAL PARENTESIS_IZQ argumentos PARENTESIS_DER
    (112) expresion -> . CONSTANTE PUNTO VARIABLE_LOCAL PARENTESIS_IZQ PARENTESIS_DER
    (21) variable -> . VARIABLE_LOCAL
    (22) variable -> . VARIABLE_GLOBAL
    (23) variable -> . VARIABLE_INSTANCIA
    (24) variable -> . VARIABLE_CLASE
    (25) variable -> . CONSTANTE
    (75) if_statement -> . IF expresion sentencias END
    (76) if_statement -> . IF expresion THEN sentencias END
    (77) if_statement -> . IF expresion sentencias ELSE sentencias END
    (78) if_statement -> . IF expresion THEN sentencias ELSE sentencias END
    (79) if_statement -> . IF expresion sentencias elsif_chain END
    (80) if_statement -> . IF expresion THEN sentencias elsif_chain END
    (81) if_statement -> . IF expresion sentencias elsif_chain ELSE sentencias END
    (82) if_statement -> . IF expresion THEN sentencias elsif_chain ELSE sentencias END
    (87) while_loop -> . WHILE expresion sentencias END
    (88) while_loop -> . WHILE expresion DO sentencias END
    (89) for_loop -> . FOR VARIABLE_LOCAL IN rango sentencias END
    (90) for_loop -> . FOR VARIABLE_LOCAL IN rango DO sentencias END
    (91) for_loop -> . FOR VARIABLE_LOCAL IN expresion sentencias END
    (92) for_loop -> . FOR VARIABLE_LOCAL IN expresion DO sentencias END
    (93) until_loop -> . UNTIL expresion sentencias END
    (94) until_loop -> . UNTIL expresion DO sentencias END
    (60) arreglo -> . CORCHETE_IZQ elementos CORCHETE_DER
    (61) arreglo -> . CORCHETE_IZQ CORCHETE_DER
    (64) hash -> . LLAVE_IZQ pares LLAVE_DER
    (65) hash -> . LLAVE_IZQ LLAVE_DER

    COMENTARIO_LINEA shift and go to state 13
    COMENTARIO_MULTILINEA shift and go to state 14
    BREAK           shift and go to state 15
    NEXT            shift and go to state 16
    REDO            shift and go to state 17
    RETURN          shift and go to state 18
    REQUIRE         shift and go to state 19
    PUTS            shift and go to state 23
    PRINT           shift and go to state 24
    GETS            shift and go to state 25
    DEF             shift and go to state 30
    CLASS           shift and go to state 32
    MODULE          shift and go to state 34
    NOT             shift and go to state 38
    RESTA           shift and go to state 37
    PARENTESIS_IZQ  shift and go to state 31
    INTEGER         shift and go to state 39
    FLOAT           shift and go to state 40
    STRING          shift and go to state 20
    SIMBOLO         shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NIL             shift and go to state 44
    VARIABLE_LOCAL  shift and go to state 21
    CONSTANTE       shift and go to state 33
    VARIABLE_GLOBAL shift and go to state 45
    VARIABLE_INSTANCIA shift and go to state 46
    VARIABLE_CLASE  shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    FOR             shift and go to state 50
    UNTIL           shift and go to state 51
    CORCHETE_IZQ    shift and go to state 52
    LLAVE_IZQ       shift and go to state 53

    programa                       shift and go to state 1
    sentencias                     shift and go to state 2
    sentencia                      shift and go to state 3
    asignacion                     shift and go to state 4
    impresion                      shift and go to state 5
    entrada_datos                  shift and go to state 6
    estructura_control             shift and go to state 7
    definicion_funcion             shift and go to state 8
    definicion_clase               shift and go to state 9
    definicion_modulo              shift and go to state 10
    estructura_datos               shift and go to state 11
    expresion                      shift and go to state 12
    variable                       shift and go to state 22
    if_statement                   shift and go to state 26
    while_loop                     shift and go to state 27
    for_loop                       shift and go to state 28
    until_loop                     shift and go to state 29
    arreglo                        shift and go to state 35
    hash                           shift and go to state 36

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sentencias .
    (2) sentencias -> sentencias . sentencia
    (4) sentencia -> . asignacion
    (5) sentencia -> . impresion PUNTO_COMA
    (6) sentencia -> . impresion
    (7) sentencia -> . entrada_datos
    (8) sentencia -> . estructura_control
    (9) sentencia -> . definicion_funcion
    (10) sentencia -> . definicion_clase
    (11) sentencia -> . definicion_modulo
    (12) sentencia -> . estructura_datos
    (13) sentencia -> . expresion
    (14) sentencia -> . COMENTARIO_LINEA
    (15) sentencia -> . COMENTARIO_MULTILINEA
    (97) sentencia -> . BREAK
    (98) sentencia -> . NEXT
    (99) sentencia -> . REDO
    (100) sentencia -> . RETURN
    (101) sentencia -> . RETURN expresion
    (125) sentencia -> . REQUIRE STRING
    (126) sentencia -> . REQUIRE VARIABLE_LOCAL
    (16) asignacion -> . variable ASIGNACION expresion
    (17) asignacion -> . variable SUMA_ASIG expresion
    (18) asignacion -> . variable RESTA_ASIG expresion
    (19) asignacion -> . variable MULT_ASIG expresion
    (20) asignacion -> . variable DIV_ASIG expresion
    (52) impresion -> . PUTS argumentos_impresion
    (53) impresion -> . PRINT argumentos_impresion
    (56) entrada_datos -> . GETS
    (57) entrada_datos -> . variable ASIGNACION GETS
    (71) estructura_control -> . if_statement
    (72) estructura_control -> . while_loop
    (73) estructura_control -> . for_loop
    (74) estructura_control -> . until_loop
    (102) definicion_funcion -> . DEF nombre_funcion sentencias END
    (103) definicion_funcion -> . DEF nombre_funcion PARENTESIS_IZQ parametros PARENTESIS_DER sentencias END
    (104) definicion_funcion -> . DEF nombre_funcion PARENTESIS_IZQ PARENTESIS_DER sentencias END
    (115) definicion_clase -> . CLASS CONSTANTE sentencias_clase END
    (116) definicion_clase -> . CLASS CONSTANTE END
    (123) definicion_modulo -> . MODULE CONSTANTE sentencias_clase END
    (124) definicion_modulo -> . MODULE CONSTANTE END
    (58) estructura_datos -> . arreglo
    (59) estructura_datos -> . hash
    (26) expresion -> . expresion SUMA expresion
    (27) expresion -> . expresion RESTA expresion
    (28) expresion -> . expresion MULTIPLICACION expresion
    (29) expresion -> . expresion DIVISION expresion
    (30) expresion -> . expresion MODULO expresion
    (31) expresion -> . expresion IGUAL expresion
    (32) expresion -> . expresion DIFERENTE expresion
    (33) expresion -> . expresion MAYOR expresion
    (34) expresion -> . expresion MENOR expresion
    (35) expresion -> . expresion MAYOR_IGUAL expresion
    (36) expresion -> . expresion MENOR_IGUAL expresion
    (37) expresion -> . expresion AND expresion
    (38) expresion -> . expresion OR expresion
    (39) expresion -> . NOT expresion
    (40) expresion -> . RESTA expresion
    (41) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (42) expresion -> . INTEGER
    (43) expresion -> . FLOAT
    (44) expresion -> . STRING
    (45) expresion -> . SIMBOLO
    (46) expresion -> . TRUE
    (47) expresion -> . FALSE
    (48) expresion -> . NIL
    (49) expresion -> . variable
    (50) expresion -> . arreglo
    (51) expresion -> . hash
    (109) expresion -> . VARIABLE_LOCAL PARENTESIS_IZQ argumentos PARENTESIS_DER
    (110) expresion -> . VARIABLE_LOCAL PARENTESIS_IZQ PARENTESIS_DER
    (111) expresion -> . CONSTANTE PUNTO VARIABLE_LOCAL PARENTESIS_IZQ argumentos PARENTESIS_DER
    (112) expresion -> . CONSTANTE PUNTO VARIABLE_LOCAL PARENTESIS_IZQ PARENTESIS_DER
    (21) variable -> . VARIABLE_LOCAL
    (22) variable -> . VARIABLE_GLOBAL
    (23) variable -> . VARIABLE_INSTANCIA
    (24) variable -> . VARIABLE_CLASE
    (25) variable -> . CONSTANTE
    (75) if_statement -> . IF expresion sentencias END
    (76) if_statement -> . IF expresion THEN sentencias END
    (77) if_statement -> . IF expresion sentencias ELSE sentencias END
    (78) if_statement -> . IF expresion THEN sentencias ELSE sentencias END
    (79) if_statement -> . IF expresion sentencias elsif_chain END
    (80) if_statement -> . IF expresion THEN sentencias elsif_chain END
    (81) if_statement -> . IF expresion sentencias elsif_chain ELSE sentencias END
    (82) if_statement -> . IF expresion THEN sentencias elsif_chain ELSE sentencias END
    (87) while_loop -> . WHILE expresion sentencias END
    (88) while_loop -> . WHILE expresion DO sentencias END
    (89) for_loop -> . FOR VARIABLE_LOCAL IN rango sentencias END
    (90) for_loop -> . FOR VARIABLE_LOCAL IN rango DO sentencias END
    (91) for_loop -> . FOR VARIABLE_LOCAL IN expresion sentencias END
    (92) for_loop -> . FOR VARIABLE_LOCAL IN expresion DO sentencias END
    (93) until_loop -> . UNTIL expresion sentencias END
    (94) until_loop -> . UNTIL expresion DO sentencias END
    (60) arreglo -> . CORCHETE_IZQ elementos CORCHETE_DER
    (61) arreglo -> . CORCHETE_IZQ CORCHETE_DER
    (64) hash -> . LLAVE_IZQ pares LLAVE_DER
    (65) hash -> . LLAVE_IZQ LLAVE_DER

    $end            reduce using rule 1 (programa -> sentencias .)
    COMENTARIO_LINEA shift and go to state 13
    COMENTARIO_MULTILINEA shift and go to state 14
    BREAK           shift and go to state 15
    NEXT            shift and go to state 16
    REDO            shift and go to state 17
    RETURN          shift and go to state 18
    REQUIRE         shift and go to state 19
    PUTS            shift and go to state 23
    PRINT           shift and go to state 24
    GETS            shift and go to state 25
    DEF             shift and go to state 30
    CLASS           shift and go to state 32
    MODULE          shift and go to state 34
    NOT             shift and go to state 38
    RESTA           shift and go to state 37
    PARENTESIS_IZQ  shift and go to state 31
    INTEGER         shift and go to state 39
    FLOAT           shift and go to state 40
    STRING          shift and go to state 20
    SIMBOLO         shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NIL             shift and go to state 44
    VARIABLE_LOCAL  shift and go to state 21
    CONSTANTE       shift and go to state 33
    VARIABLE_GLOBAL shift and go to state 45
    VARIABLE_INSTANCIA shift and go to state 46
    VARIABLE_CLASE  shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    FOR             shift and go to state 50
    UNTIL           shift and go to state 51
    CORCHETE_IZQ    shift and go to state 52
    LLAVE_IZQ       shift and go to state 53

    sentencia                      shift and go to state 54
    asignacion                     shift and go to state 4
    impresion                      shift and go to state 5
    entrada_datos                  shift and go to state 6
    estructura_control             shift and go to state 7
    definicion_funcion             shift and go to state 8
    definicion_clase               shift and go to state 9
    definicion_modulo              shift and go to state 10
    estructura_datos               shift and go to state 11
    expresion                      shift and go to state 12
    variable                       shift and go to state 22
    if_statement                   shift and go to state 26
    while_loop                     shift and go to state 27
    for_loop                       shift and go to state 28
    until_loop                     shift and go to state 29
    arreglo                        shift and go to state 35
    hash                           shift and go to state 36

state 3

    (3) sentencias -> sentencia .

    COMENTARIO_LINEA reduce using rule 3 (sentencias -> sentencia .)
    COMENTARIO_MULTILINEA reduce using rule 3 (sentencias -> sentencia .)
    BREAK           reduce using rule 3 (sentencias -> sentencia .)
    NEXT            reduce using rule 3 (sentencias -> sentencia .)
    REDO            reduce using rule 3 (sentencias -> sentencia .)
    RETURN          reduce using rule 3 (sentencias -> sentencia .)
    REQUIRE         reduce using rule 3 (sentencias -> sentencia .)
    PUTS            reduce using rule 3 (sentencias -> sentencia .)
    PRINT           reduce using rule 3 (sentencias -> sentencia .)
    GETS            reduce using rule 3 (sentencias -> sentencia .)
    DEF             reduce using rule 3 (sentencias -> sentencia .)
    CLASS           reduce using rule 3 (sentencias -> sentencia .)
    MODULE          reduce using rule 3 (sentencias -> sentencia .)
    NOT             reduce using rule 3 (sentencias -> sentencia .)
    RESTA           reduce using rule 3 (sentencias -> sentencia .)
    PARENTESIS_IZQ  reduce using rule 3 (sentencias -> sentencia .)
    INTEGER         reduce using rule 3 (sentencias -> sentencia .)
    FLOAT           reduce using rule 3 (sentencias -> sentencia .)
    STRING          reduce using rule 3 (sentencias -> sentencia .)
    SIMBOLO         reduce using rule 3 (sentencias -> sentencia .)
    TRUE            reduce using rule 3 (sentencias -> sentencia .)
    FALSE           reduce using rule 3 (sentencias -> sentencia .)
    NIL             reduce using rule 3 (sentencias -> sentencia .)
    VARIABLE_LOCAL  reduce using rule 3 (sentencias -> sentencia .)
    CONSTANTE       reduce using rule 3 (sentencias -> sentencia .)
    VARIABLE_GLOBAL reduce using rule 3 (sentencias -> sentencia .)
    VARIABLE_INSTANCIA reduce using rule 3 (sentencias -> sentencia .)
    VARIABLE_CLASE  reduce using rule 3 (sentencias -> sentencia .)
    IF              reduce using rule 3 (sentencias -> sentencia .)
    WHILE           reduce using rule 3 (sentencias -> sentencia .)
    FOR             reduce using rule 3 (sentencias -> sentencia .)
    UNTIL           reduce using rule 3 (sentencias -> sentencia .)
    CORCHETE_IZQ    reduce using rule 3 (sentencias -> sentencia .)
    LLAVE_IZQ       reduce using rule 3 (sentencias -> sentencia .)
    $end            reduce using rule 3 (sentencias -> sentencia .)
    END             reduce using rule 3 (sentencias -> sentencia .)
    ELSE            reduce using rule 3 (sentencias -> sentencia .)
    ELSIF           reduce using rule 3 (sentencias -> sentencia .)


state 4

    (4) sentencia -> asignacion .

    COMENTARIO_LINEA reduce using rule 4 (sentencia -> asignacion .)
    COMENTARIO_MULTILINEA reduce using rule 4 (sentencia -> asignacion .)
    BREAK           reduce using rule 4 (sentencia -> asignacion .)
    NEXT            reduce using rule 4 (sentencia -> asignacion .)
    REDO            reduce using rule 4 (sentencia -> asignacion .)
    RETURN          reduce using rule 4 (sentencia -> asignacion .)
    REQUIRE         reduce using rule 4 (sentencia -> asignacion .)
    PUTS            reduce using rule 4 (sentencia -> asignacion .)
    PRINT           reduce using rule 4 (sentencia -> asignacion .)
    GETS            reduce using rule 4 (sentencia -> asignacion .)
    DEF             reduce using rule 4 (sentencia -> asignacion .)
    CLASS           reduce using rule 4 (sentencia -> asignacion .)
    MODULE          reduce using rule 4 (sentencia -> asignacion .)
    NOT             reduce using rule 4 (sentencia -> asignacion .)
    RESTA           reduce using rule 4 (sentencia -> asignacion .)
    PARENTESIS_IZQ  reduce using rule 4 (sentencia -> asignacion .)
    INTEGER         reduce using rule 4 (sentencia -> asignacion .)
    FLOAT           reduce using rule 4 (sentencia -> asignacion .)
    STRING          reduce using rule 4 (sentencia -> asignacion .)
    SIMBOLO         reduce using rule 4 (sentencia -> asignacion .)
    TRUE            reduce using rule 4 (sentencia -> asignacion .)
    FALSE           reduce using rule 4 (sentencia -> asignacion .)
    NIL             reduce using rule 4 (sentencia -> asignacion .)
    VARIABLE_LOCAL  reduce using rule 4 (sentencia -> asignacion .)
    CONSTANTE       reduce using rule 4 (sentencia -> asignacion .)
    VARIABLE_GLOBAL reduce using rule 4 (sentencia -> asignacion .)
    VARIABLE_INSTANCIA reduce using rule 4 (sentencia -> asignacion .)
    VARIABLE_CLASE  reduce using rule 4 (sentencia -> asignacion .)
    IF              reduce using rule 4 (sentencia -> asignacion .)
    WHILE           reduce using rule 4 (sentencia -> asignacion .)
    FOR             reduce using rule 4 (sentencia -> asignacion .)
    UNTIL           reduce using rule 4 (sentencia -> asignacion .)
    CORCHETE_IZQ    reduce using rule 4 (sentencia -> asignacion .)
    LLAVE_IZQ       reduce using rule 4 (sentencia -> asignacion .)
    $end            reduce using rule 4 (sentencia -> asignacion .)
    END             reduce using rule 4 (sentencia -> asignacion .)
    ELSE            reduce using rule 4 (sentencia -> asignacion .)
    ELSIF           reduce using rule 4 (sentencia -> asignacion .)


state 5

    (5) sentencia -> impresion . PUNTO_COMA
    (6) sentencia -> impresion .
